<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.radiobutton.MainActivity">

    <TextView
        android:id="@+id/txvTypeClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/txvTypeClient"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="45dp" />

    <RadioGroup
        android:id="@+id/rgbTypeClient"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <RadioButton
            android:id="@+id/rbtParticular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbt_Particular"/>

        <RadioButton
            android:id="@+id/rbtBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbt_Business"/>

    </RadioGroup>

<include layout="@layout/layout_particular_"
    app:layout_constraintTop_toBottomOf="@id/rgbTypeClient"
    app:layout_constraintStart_toStartOf="@id/guideline"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    />

    <include layout="@layout/layout_business"
        app:layout_constraintTop_toBottomOf="@id/rgbTypeClient"
        app:layout_constraintStart_toStartOf="@id/guideline"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        />
</android.support.constraint.ConstraintLayout>
